<resources>
    <string name="app_name">Budgey</string>
    <string name="title_activity_budgets">Budgets</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string-array name="UnitsOfTime">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="SortOptions">
        <item>Name</item>
        <item>Category</item>
        <item>Amount</item>
        <item>Date</item>
    </string-array>

    <string-array name="Days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>Septemeber</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="Settings">Settings</string>
    <string name="Budgets">Budgets</string>
    <string name="Categories">Categories</string>
    <string name="Transactions">Transactions</string>
    <string name="Recurring">Recurring</string>

    <string name="TransactionOverview">Transaction Overview</string>
    <string name="BudgetOverview">Budgets Overview</string>
    <string name="CategoriesOverview">Categories Overview</string>
    <string name="RecurringOverview">Recurring Overview</string>

    <string name="TransactionInfo">Transaction Info</string>
    <string name="BudgetInfo">Budget Info</string>
    <string name="CategoriesInfo">Categories Info</string>
    <string name="RecurringInfo">Recurring Info</string>

    <string name="CategoriesList">Categories List</string>

    <string name="Name">Name</string>
    <string name="Amount">Amount</string>
    <string name="Total">Total</string>
    <string name="Date">Date</string>
    <string name="Category">Category</string>
    <string name="Today">Today</string>
    <string name="StartDate">Start Date</string>
    <string name="Every">Every:\u0020</string>
    <string name="Length">Length:\u0020</string>
    <string name="Repeats">Repeats</string>
    <string name="Left">Left</string>
    <string name="Next">Next:</string>
    <string name="Uses">Uses:\u0020</string>
    <string name="LastMonth">Last Month</string>
    <string name="DaysLeft">\u0020Days Left</string>

    <string name="DashSpace">\u0020-\u0020</string>
    <string name="Slash">\</string>
</resources>
