<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/CategoryCard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip">

            <TextView
                android:id="@+id/StartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:gravity="center_vertical"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/UsesAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="12"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/UsesText"
                android:layout_alignTop="@+id/UsesText" />

            <TextView
                android:id="@+id/UsesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/Uses"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/StartText" />

            <TextView
                android:id="@+id/AmountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:gravity="center_vertical"
                android:text="@string/Amount"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>